# MeetUp

./: .gitignore  API.md  CI.yml  CMakeLists.txt  DatabaseMap.sql  Makefile  README.md  Test.txt  docker_packages.cnf  mainwindow.cpp  meetup_go.pro  meetup_go.pro.user.edf6c17.22  run_coverage.sh  run_linters.sh  run_memtest.sh  screensfactory.h
gtest/: CMakeLists.txt  context.cpp  database.cpp  dataclass.cpp  handler.cpp  parsing.cpp  routing.cpp
http_server/: CMakeLists.txt  connection.cpp  connection.hpp  main.cpp  request_handler.cpp  request_parser.hpp
project/: CMakeLists.txt  main.cpp
project/Configs/: APIKeys.hpp
project/base_architecture/: CMakeLists.txt  Makefile
project/base_architecture/include/impl/: AsyncServer.hpp  ClientConnection.hpp  ConnectionClientManager.hpp  Header.hpp  HttpRequest.hpp  MimeTypes.hpp  Reply.hpp  RequestHandler.hpp  RequestParser.hpp
project/base_architecture/include/virtual/: Connection.hpp  ConnectionManager.hpp  Handler.hpp  Server.hpp
project/base_architecture/send/: index.html
project/base_architecture/src/: AsyncServer.cpp  ClientConnection.cpp  ConnectionClientManager.cpp  MimeTypes.cpp  Reply.cpp  RequestHandler.cpp  RequestParser.cpp  main.cpp
project/configs/: APIKeys.hpp  Database.txt
project/context/: CMakeLists.txt
project/context/include/: AddressData.hpp  Contacts.hpp  Context.hpp  Event.hpp  GeneralData.hpp  Group.hpp  MeetUp.hpp  PersonalData.hpp  Time.hpp  User.hpp
project/context/include/Data/: AddressData.hpp  GeneralData.hpp  PersonalData.hpp
project/context/include/Group/: Group.hpp  MeetUp.hpp
project/context/src/: AddressData.cpp  Contacts.cpp  Context.cpp  Event.cpp  GeneralData.cpp  Group.cpp  MeetUp.cpp  PersonalData.cpp  Time.cpp  User.cpp
project/context/src/Data/: AddressData.cpp  GeneralData.cpp  PersonalData.cpp
project/context/src/Group/: Group.cpp  MeetUp.cpp
project/database/: CMakeLists.txt
project/database/PostgreSQL/: DB.cpp  DBConnectionImpl.hpp  DBContactsImplDefinition.hpp  DBEventImplDefinition.hpp  DBGroupImplDefinition.hpp  DBManagerImpl.hpp  DBUserDataImplDefinition.hpp  DBUserImplDefinition.hpp
project/database/PostgreSQL/include/: DBConnection.hpp  DBConnectionImpl.hpp  DBContactsImplDefinition.hpp  DBManager.hpp  DBManagerImpl.hpp  DBManagerPG.hpp  PGConnection.hpp
project/database/PostgreSQL/src/: DBContactsImpl.cpp  DBEventImpl.cpp  DBGetFieldImpl.cpp  DBGroupImpl.cpp  DBManagerPG.cpp  DBRegAuthImpl.cpp  DBSynchroClientImpl.cpp  DBUserDataImpl.cpp  DBUserImpl.cpp  PGConnection.cpp
project/database/include/impl/: DBConnection.hpp  DBContactsImpl.hpp  DBEventImpl.hpp  DBGetFieldImpl.hpp  DBGroupImpl.hpp  DBManager.hpp  DBMethods.hpp  DBRegAuthImpl.hpp  DBSynchroClientImpl.hpp  DBUserDataImpl.hpp  DBUserImpl.hpp  DBWorker.hpp  DataBaseConnector.hpp
project/database/include/virtual/: DBConnection.hpp  DBContacts.hpp  DBEvent.hpp  DBGetField.hpp  DBGroup.hpp  DBRegAuth.hpp  DBSynchroClient.hpp  DBUser.hpp  DBUserData.hpp
project/database_connector/SQl/: pool.sql
project/handling/: CMakeLists.txt
project/handling/definition/: HandlerContactsDefinition.hpp  HandlerEventDefinition.hpp  HandlerRegAuthDefinition.hpp  HandlerSynchroClientDefinition.hpp  HandlerUserDefinition.hpp
project/handling/definition/Data/: HandlerAddressDataDefinition.hpp  HandlerGeneralDataDefinition.hpp  HandlerPersonalDataDefinition.hpp  HandlerPrivateDataDefinition.hpp
project/handling/definition/Group/Base/: HandlerGroupDefinition.hpp
project/handling/definition/Group/MeetUp/: HandlerMeetUpDefinition.hpp
project/handling/definition/Group/User/: HandlerGroupManagementDefinition.hpp
project/handling/include/impl/: HandlerContacts.hpp  HandlerEvent.hpp  HandlerRegAuth.hpp  HandlerSynchroClient.hpp  HandlerUser.hpp
project/handling/include/impl/Data/: HandlerAddressData.hpp  HandlerGeneralData.hpp  HandlerPersonalData.hpp  HandlerPrivateData.hpp
project/handling/include/impl/Group/: HandlerGroup.hpp  HandlerMeetUp.hpp
project/handling/include/virtual/: Handler.hpp
project/handling/src/: HandlerContacts.cpp  HandlerEvent.cpp  HandlerRegAuth.cpp  HandlerRegiAuth.cpp  HandlerSynchroClient.cpp
project/handling/src/Data/: HandlerAddressData.cpp  HandlerGeneralData.cpp  HandlerPersonalData.cpp  HandlerPrivateData.cpp
project/handling/src/Group/Base/: HandlerGroup.cpp
project/handling/src/Group/MeetUp/: HandlerMeetUp.cpp
project/handling/src/Group/User/: HandlerGroupManagement.cpp
project/parsing/: CMakeLists.txt
project/parsing/JSON/src/: ParserContacts.cpp  ParserEvent.cpp  ParserRegAuth.cpp  ParserUser.cpp
project/parsing/JSON/src/Data/: ParserAddressData.cpp  ParserGeneralData.cpp  ParserPersonalData.cpp
project/parsing/JSON/src/Group/: ParserGroup.cpp  ParserMeetUp.cpp
project/parsing/include/impl/: ParserContacts.hpp  ParserEvent.hpp  ParserRegAuth.hpp  ParserUser.hpp
project/parsing/include/impl/Data/: ParserAddressData.hpp  ParserGeneralData.hpp  ParserPersonalData.hpp  ParserPrivateData.hpp
project/parsing/include/virtual/: Parser.hpp
project/route/include/impl/: RouteImpl.hpp  RouteMapKeys.hpp
project/route/include/virtual/: Route.hpp
project/route/src/: RouteImpl.cpp
project/routing/: CMakeLists.txt
project/routing/definition/: MultithreadingRouteImplDefinition.hpp  RouteImpl.hpp  RouteImplDefinition.hpp
project/routing/include/impl/: RouteImpl.hpp
project/routing/include/virtual/: Route.hpp
project/routing/src/: RouteImpl.cpp
tests/: CMakeLists.txt  GoodRequest_1.gold  GoodRequest_2.gold  GoodRequest_3.gold  InvalidRequest.txt  TestAsynhGetSeq.cpp  TestClientConnetion.cpp  TestGoodRequest.cpp  TestInvalidRequest.cpp  TestRequestServInt.cpp  test_test.cpp
tests/integrated_tests/: GoodRequest_1_gold.txt  GoodRequest_2_gold.txt  GoodRequest_3_gold.txt  GoodRequest_4_gold.txt  InvalidRequest_gold.txt  TestAsynhGetSeq.cpp  TestGoodRequest.cpp  TestInvalidRequest.cpp  coverage.sh  int.sh  test_test.cpp
tests/unit_tests/: business_logic.cpp  context.cpp  database.cpp  handler.cpp  parsing.cpp  routing.cpp  threads.cpp
(+35 files in other folders)
